# kdevelop-python

./: CMakeLists.txt
parser/: CMakeLists.txt  python_header.h
